--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -488,3 +488,28 @@ table.md-table th.md-column {
     text-shadow: unset;
 }
 
+.url-tokens-row .url-tokens{
+    display: -webkit-flex; /* Safari */
+    display: flex;
+    flex-wrap:wrap;
+    margin-top: 10px;
+}
+
+.url-tokens-row .url-token{
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 0px 8px 8px 0;
+    line-height: 12px;
+    background-color: #8d8d8d;
+    color: #fff;
+    padding: 5px;
+}
+.url-tokens-row .url-token:hover{
+    background: #363636;
+}
+
+.url-tokens-row .url-token.selected{
+    background-color: #c2c2c2;
+    cursor: default;
+}
+
