--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -842,6 +842,7 @@ md-table-container{
 }
 .view_column_con ul li input[type="checkbox"]{
     margin-right: 10px;
+    cursor: pointer;
 }
 .view_column_con button{
     background: #00838f !important;
@@ -1007,5 +1008,9 @@ h1.setting-title{
     float: left;
     margin-left: 10px;
     cursor: pointer;
+}
+.referral-program{
+    max-width: 1030px;
+    margin:0 auto;
 }
 /*End setting Style*/
