--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -830,19 +830,8 @@ md-table-container{
     min-width: 300px;
     padding:10px;
 }
-.view_column_con .material-icons.btn-icon{
-    position: absolute;
-    z-index: 30;
-    margin: 17px 0;
-    width: 183px;
-    text-align: left;
-    padding-left: 10px !important;
-    height: 34px;
+.material-icons.btn-icon{
     line-height: 34px;
-}
-.view_column_con .material-icons.btn-icon.close-icon{
-    left: 210px;
-    width: 104px;
 }
 .view_column_con ul li:hover{
     background: #00838f;
@@ -853,7 +842,7 @@ md-table-container{
 }
 .view_column_con button{
     background: #00838f !important;
-    padding-left: 35px;
+    padding-left: 0px;
 }
 .view_column_con button.close-btn{
     background: #8992aa !important;
@@ -890,7 +879,7 @@ table.md-table tr.md-row.first-tree td.md-cell:first-child{
     border-bottom: 1px solid #c9c9c9;
 }
 .dash-board .data-list .data-list-con{
-    margin-bottom: 15px;
+    margin: 15px 0;
     padding-left: 0;
 }
 .dash-board .data-list .data-list-con:last-child{
@@ -929,6 +918,14 @@ table.md-table tr.md-row.first-tree td.md-cell:first-child{
 .table thead,
 .table tfoot{
     background: #00838f;
+    color: #fff;
+}
+.md-table tfoot.md-body{
+    height: 48px;
+    line-height: 48px;
+    background: rgb(0, 96, 100);
+}
+table.md-table tfoot td.md-cell{
     color: #fff;
 }
 .data-tables-chart-container table tbody td:first-child{
@@ -996,7 +993,6 @@ h1.setting-title{
 .profile-content{
     padding: 80px 50px;
     background: rgba(18, 189, 206, 0.14);
-    margin-bottom: 20px;
 }
 .password-change .profile-form-footer{
     margin-right: 0;
@@ -1373,6 +1369,10 @@ input[type="checkbox"].th-checkbox{
 } 
 /*End setting Style*/
 /*Start Flow Style*/
+.flow-select .cs-subform-select,
+.edit-page .cs-subform-select{
+    margin-top: 0;
+}
 .cs-page-flow{
     padding: 10px;
 }
