--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -1069,8 +1069,9 @@ h1.setting-title{
     margin: 0;
 }
 .account-form,
-.basic-form{
-    max-width: 940px;
+.basic-form,
+.data-table{
+    max-width: 1004px;
     margin: 0 auto;
 }
 .basic-form .campaign-radio{
@@ -1111,7 +1112,8 @@ h1.setting-title{
 .save-btn .material-icons{
     font-size:22px;
 }
-.referral-program{
+.referral-program,
+.setUp-page{
     max-width: 1030px;
     margin:0 auto;
 }
