bugList NB-11 and campaign edit dialog flow preview update 0219

--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -688,6 +688,11 @@ md-content.cs-main-content{
     padding-left: 0px;
 }
 
+.material-icons.flow-arrow-down{
+    float: left;
+    margin-top: 6px;
+}
+
 ul{
     list-style: none;
 }
